Test: Update old specs and add new tests for password authentication

--- a/spec/fixtures/vcr_cassettes/New_Viewing_Party_Page/displays_viewing_party_attributes/flashes_a_message_when_party_duration_is_less_than_movie_duration.yml
+++ b/spec/fixtures/vcr_cassettes/New_Viewing_Party_Page/displays_viewing_party_attributes/flashes_a_message_when_party_duration_is_less_than_movie_duration.yml
@@ -25,49 +25,49 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 07 Jul 2023 20:26:34 GMT
+      - Mon, 17 Jul 2023 19:27:03 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25447
+      - public, max-age=25554
       X-Memc:
       - HIT
       X-Memc-Key:
       - 9d48db5c244b9c3e3d162ef155211175
       X-Memc-Age:
-      - '25214'
+      - '777'
       X-Memc-Expires:
-      - '1435'
+      - '22434'
       Etag:
-      - W/"ae6e105e53194fb09b6b711603383419"
+      - W/"9e96d280d5a657c5bea3f49fbbc615b2"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 1c2fb26f064af9cfc8090f524b03de02.cloudfront.net (CloudFront)
+      - 1.1 fb41e17254dfd781519e95cedd257826.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ATL58-P2
+      - IAD89-C3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - uk8Y8QkA0KhCY7gAgbfg6CYgHHlu9Tl6v0Zi5nJlylt60g_jB1p26g==
+      - KfuVBRanifS2w5e4saglF-HeEB8SW3ztEp08yToXrTOKLC9Zc_rkPg==
       Age:
-      - '11767'
+      - '1083'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
-        Godfather Collection","poster_path":"/9Baumh5J9N1nJUYzNkm0xsgjpwY.jpg","backdrop_path":"/3WZTxpgscsmoUk81TuECXdFOD0R.jpg"},"budget":6000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"http://www.thegodfather.com/","id":238,"imdb_id":"tt0068646","original_language":"en","original_title":"The
+        Godfather Collection","poster_path":"/e5iVtjkjM30znn86JsvkBYtvEo1.jpg","backdrop_path":"/3WZTxpgscsmoUk81TuECXdFOD0R.jpg"},"budget":6000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"http://www.thegodfather.com/","id":238,"imdb_id":"tt0068646","original_language":"en","original_title":"The
         Godfather","overview":"Spanning the years 1945 to 1955, a chronicle of the
         fictional Italian-American Corleone crime family. When organized crime family
         patriarch, Vito Corleone barely survives an attempt on his life, his youngest
         son, Michael steps in to take care of the would-be killers, launching a campaign
-        of bloody revenge.","popularity":108.62,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
+        of bloody revenge.","popularity":157.026,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.71,"vote_count":18180}'
-  recorded_at: Fri, 07 Jul 2023 23:42:41 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.71,"vote_count":18238}'
+  recorded_at: Mon, 17 Jul 2023 19:45:06 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/238?api_key=22e2d7c3a554f28d25ba38e8393b8f5d&language=en-US
@@ -93,47 +93,47 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 07 Jul 2023 20:26:34 GMT
+      - Mon, 17 Jul 2023 19:27:03 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25447
+      - public, max-age=25554
       X-Memc:
       - HIT
       X-Memc-Key:
       - 9d48db5c244b9c3e3d162ef155211175
       X-Memc-Age:
-      - '25214'
+      - '777'
       X-Memc-Expires:
-      - '1435'
+      - '22434'
       Etag:
-      - W/"ae6e105e53194fb09b6b711603383419"
+      - W/"9e96d280d5a657c5bea3f49fbbc615b2"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 fea48d36741a5a8b0c278e8b50136aba.cloudfront.net (CloudFront)
+      - 1.1 1fa3f854976309f3d11907ad7125291a.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ATL58-P2
+      - IAD89-C3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - r87qkNe1Nizi9d9OossM9YhG-XsX6xaCv__9IgjSRZRKZMBcagxQew==
+      - xTa99ZDxq_Sh3f6WU64V6DQt8ZCeXPX3ek_1plnmLB3RiGnzNDVqsg==
       Age:
-      - '11767'
+      - '1084'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
-        Godfather Collection","poster_path":"/9Baumh5J9N1nJUYzNkm0xsgjpwY.jpg","backdrop_path":"/3WZTxpgscsmoUk81TuECXdFOD0R.jpg"},"budget":6000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"http://www.thegodfather.com/","id":238,"imdb_id":"tt0068646","original_language":"en","original_title":"The
+        Godfather Collection","poster_path":"/e5iVtjkjM30znn86JsvkBYtvEo1.jpg","backdrop_path":"/3WZTxpgscsmoUk81TuECXdFOD0R.jpg"},"budget":6000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"http://www.thegodfather.com/","id":238,"imdb_id":"tt0068646","original_language":"en","original_title":"The
         Godfather","overview":"Spanning the years 1945 to 1955, a chronicle of the
         fictional Italian-American Corleone crime family. When organized crime family
         patriarch, Vito Corleone barely survives an attempt on his life, his youngest
         son, Michael steps in to take care of the would-be killers, launching a campaign
-        of bloody revenge.","popularity":108.62,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
+        of bloody revenge.","popularity":157.026,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.71,"vote_count":18180}'
-  recorded_at: Fri, 07 Jul 2023 23:42:41 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.71,"vote_count":18238}'
+  recorded_at: Mon, 17 Jul 2023 19:45:07 GMT
 recorded_with: VCR 6.2.0
