--- a/spec/fixtures/vcr_cassettes/New_Viewing_Party_Page/displays_viewing_party_attributes/should_display_the_title_of_the_movie_and_a_form_to_make_a_new_viewing_party.yml
+++ b/spec/fixtures/vcr_cassettes/New_Viewing_Party_Page/displays_viewing_party_attributes/should_display_the_title_of_the_movie_and_a_form_to_make_a_new_viewing_party.yml
@@ -25,47 +25,47 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 07 Jul 2023 20:26:34 GMT
+      - Mon, 17 Jul 2023 19:27:03 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25447
+      - public, max-age=25554
       X-Memc:
       - HIT
       X-Memc-Key:
       - 9d48db5c244b9c3e3d162ef155211175
       X-Memc-Age:
-      - '25214'
+      - '777'
       X-Memc-Expires:
-      - '1435'
+      - '22434'
       Etag:
-      - W/"ae6e105e53194fb09b6b711603383419"
+      - W/"9e96d280d5a657c5bea3f49fbbc615b2"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 1c154fd264f63b7337d5237240584530.cloudfront.net (CloudFront)
+      - 1.1 613faec4b883bfe2ebdd8a74d5006f4c.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ATL58-P2
+      - IAD89-C3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - IseCkQGSEqNn0IQ27dX9u7_JCPwWhwigh3_k_FXhh3I6vP0uCtnOTQ==
+      - m4iSbH3UslkeV2g5RSifrOaSZSJXAC279oHJARoxhD0ipSCcb3u4QA==
       Age:
-      - '5306'
+      - '1080'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
-        Godfather Collection","poster_path":"/9Baumh5J9N1nJUYzNkm0xsgjpwY.jpg","backdrop_path":"/3WZTxpgscsmoUk81TuECXdFOD0R.jpg"},"budget":6000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"http://www.thegodfather.com/","id":238,"imdb_id":"tt0068646","original_language":"en","original_title":"The
+        Godfather Collection","poster_path":"/e5iVtjkjM30znn86JsvkBYtvEo1.jpg","backdrop_path":"/3WZTxpgscsmoUk81TuECXdFOD0R.jpg"},"budget":6000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"http://www.thegodfather.com/","id":238,"imdb_id":"tt0068646","original_language":"en","original_title":"The
         Godfather","overview":"Spanning the years 1945 to 1955, a chronicle of the
         fictional Italian-American Corleone crime family. When organized crime family
         patriarch, Vito Corleone barely survives an attempt on his life, his youngest
         son, Michael steps in to take care of the would-be killers, launching a campaign
-        of bloody revenge.","popularity":108.62,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
+        of bloody revenge.","popularity":157.026,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.71,"vote_count":18180}'
-  recorded_at: Fri, 07 Jul 2023 21:54:59 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.71,"vote_count":18238}'
+  recorded_at: Mon, 17 Jul 2023 19:45:03 GMT
 recorded_with: VCR 6.2.0
