--- a/spec/fixtures/vcr_cassettes/TmdbFacade/creates_TMDB_Facade/has_a_movie_details_facade_with_attributes.yml
+++ b/spec/fixtures/vcr_cassettes/TmdbFacade/creates_TMDB_Facade/has_a_movie_details_facade_with_attributes.yml
@@ -25,45 +25,45 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 08 Jul 2023 23:16:51 GMT
+      - Mon, 17 Jul 2023 19:27:03 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25553
+      - public, max-age=25554
       X-Memc:
       - HIT
       X-Memc-Key:
       - 9d48db5c244b9c3e3d162ef155211175
       X-Memc-Age:
-      - '20824'
+      - '777'
       X-Memc-Expires:
-      - '5998'
+      - '22434'
       Etag:
-      - W/"608f6df65be42c48bd0a900a964523da"
+      - W/"9e96d280d5a657c5bea3f49fbbc615b2"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Miss from cloudfront
       Via:
-      - 1.1 8ab495d5c70152d495ba77099660f1e6.cloudfront.net (CloudFront)
+      - 1.1 c84ecfd128e1f4c41a53a2b42410f3b8.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - LAX3-C3
+      - IAD89-C3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - ejEEhn5K0oCZbIPjHdltQwneXK5tc9GEMhixPir3ehKffHxx2PUk9w==
+      - CFEobhJ9cO5uhr_kLBobe6mh5x-E6-k05p8-qrbnq_7tZ8C9_CVv7w==
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
-        Godfather Collection","poster_path":"/9Baumh5J9N1nJUYzNkm0xsgjpwY.jpg","backdrop_path":"/3WZTxpgscsmoUk81TuECXdFOD0R.jpg"},"budget":6000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"http://www.thegodfather.com/","id":238,"imdb_id":"tt0068646","original_language":"en","original_title":"The
+        Godfather Collection","poster_path":"/e5iVtjkjM30znn86JsvkBYtvEo1.jpg","backdrop_path":"/3WZTxpgscsmoUk81TuECXdFOD0R.jpg"},"budget":6000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"http://www.thegodfather.com/","id":238,"imdb_id":"tt0068646","original_language":"en","original_title":"The
         Godfather","overview":"Spanning the years 1945 to 1955, a chronicle of the
         fictional Italian-American Corleone crime family. When organized crime family
         patriarch, Vito Corleone barely survives an attempt on his life, his youngest
         son, Michael steps in to take care of the would-be killers, launching a campaign
-        of bloody revenge.","popularity":118.143,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
+        of bloody revenge.","popularity":157.026,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.71,"vote_count":18191}'
-  recorded_at: Sat, 08 Jul 2023 23:16:51 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.71,"vote_count":18238}'
+  recorded_at: Mon, 17 Jul 2023 19:27:03 GMT
 recorded_with: VCR 6.2.0
