--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@
 !/tmp/storage/
 !/tmp/storage/.keep
 /coverage
+/coverage/last_run.json
+/coverage/resultset.json
+/coverage/index.html
 
 /public/assets
 
