Authentication clean up - challenge 1 complete

--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,9 @@
 /tmp/storage/*
 !/tmp/storage/
 !/tmp/storage/.keep
-# /coverage
 
 
+/coverage
 /public/assets
 
 # Ignore master key for decrypting credentials and more.
