--- a/spec/fixtures/vcr_cassettes/Party/instance_methods/_attendees/can_return_all_attendees_of_party.yml
+++ b/spec/fixtures/vcr_cassettes/Party/instance_methods/_attendees/can_return_all_attendees_of_party.yml
@@ -25,36 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 08 Jul 2023 20:23:21 GMT
+      - Mon, 24 Jul 2023 01:29:04 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=22584
+      - public, max-age=24109
       X-Memc:
       - HIT
       X-Memc-Key:
       - a3dde13b574bdd203b706f79c6da42d3
       X-Memc-Age:
-      - '16515'
+      - '1286'
       X-Memc-Expires:
-      - '5673'
+      - '21698'
       Etag:
-      - W/"0957ffa2708c9495fd17437fb9076902"
+      - W/"080f55a96290195d35a16a6d71391c29"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 471c951325b4c2c11c6c583a1d28e92a.cloudfront.net (CloudFront)
+      - 1.1 6c02603f677dd5669f8ab3b41062340e.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ORD58-P1
+      - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - 1PQoB3ojDClOgELnyzH26_PBeZhzv4tq-8llE_7yaldA76IGBjQ7DA==
+      - HKOt2pZ0cO9rIDTTTrxIgxrCzDTJNHFFsQXfFkF66jytsoJVBf6D3Q==
       Age:
-      - '2626'
+      - '2765'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/zqkmTXzjkAgXmEWLRsY4UpTWCeo.jpg","belongs_to_collection":{"id":10,"name":"Star
@@ -64,10 +64,10 @@ http_interactions:
         forces in their effort to take over the galactic Empire. Venturesome Luke
         Skywalker and dashing captain Han Solo team together with the loveable robot
         duo R2-D2 and C-3PO to rescue the beautiful princess and restore peace and
-        justice in the Empire.","popularity":79.873,"poster_path":"/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg","production_companies":[{"id":1,"logo_path":"/o86DbpburjxrqAzEDhXZcyE8pDb.png","name":"Lucasfilm
+        justice in the Empire.","popularity":80.88,"poster_path":"/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg","production_companies":[{"id":1,"logo_path":"/o86DbpburjxrqAzEDhXZcyE8pDb.png","name":"Lucasfilm
         Ltd.","origin_country":"US"},{"id":25,"logo_path":"/qZCc1lty5FzX30aOCVRBLzaVmcp.png","name":"20th
         Century Fox","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1977-05-25","revenue":775398007,"runtime":121,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
-        long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.203,"vote_count":18840}'
-  recorded_at: Sat, 08 Jul 2023 21:07:07 GMT
+        long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.204,"vote_count":18900}'
+  recorded_at: Mon, 24 Jul 2023 02:15:09 GMT
 recorded_with: VCR 6.2.0
