--- a/spec/fixtures/vcr_cassettes/Party/instance_methods/_movie_image/returns_the_movie_image_src.yml
+++ b/spec/fixtures/vcr_cassettes/Party/instance_methods/_movie_image/returns_the_movie_image_src.yml
@@ -25,36 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 08 Jul 2023 20:23:21 GMT
+      - Mon, 24 Jul 2023 01:29:04 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=22584
+      - public, max-age=24109
       X-Memc:
       - HIT
       X-Memc-Key:
       - a3dde13b574bdd203b706f79c6da42d3
       X-Memc-Age:
-      - '16515'
+      - '1286'
       X-Memc-Expires:
-      - '5673'
+      - '21698'
       Etag:
-      - W/"0957ffa2708c9495fd17437fb9076902"
+      - W/"080f55a96290195d35a16a6d71391c29"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 3699bc5ea5aacbe1d32ebe3e874f0c68.cloudfront.net (CloudFront)
+      - 1.1 8bd27032f0d38908fbe32b696e45c288.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ORD58-P1
+      - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - DSlVUi0UgU0GNuqzG04tkKwdXazthpdFJkWULjB-9DdIfifg_eF1BQ==
+      - d_qsg7IwF9ggUyvqvZd2cxrpdy2-fx0beU707v4Y7wH6hbjjfuSdrQ==
       Age:
-      - '2626'
+      - '2765'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/zqkmTXzjkAgXmEWLRsY4UpTWCeo.jpg","belongs_to_collection":{"id":10,"name":"Star
@@ -64,12 +64,12 @@ http_interactions:
         forces in their effort to take over the galactic Empire. Venturesome Luke
         Skywalker and dashing captain Han Solo team together with the loveable robot
         duo R2-D2 and C-3PO to rescue the beautiful princess and restore peace and
-        justice in the Empire.","popularity":79.873,"poster_path":"/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg","production_companies":[{"id":1,"logo_path":"/o86DbpburjxrqAzEDhXZcyE8pDb.png","name":"Lucasfilm
+        justice in the Empire.","popularity":80.88,"poster_path":"/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg","production_companies":[{"id":1,"logo_path":"/o86DbpburjxrqAzEDhXZcyE8pDb.png","name":"Lucasfilm
         Ltd.","origin_country":"US"},{"id":25,"logo_path":"/qZCc1lty5FzX30aOCVRBLzaVmcp.png","name":"20th
         Century Fox","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1977-05-25","revenue":775398007,"runtime":121,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
-        long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.203,"vote_count":18840}'
-  recorded_at: Sat, 08 Jul 2023 21:07:07 GMT
+        long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.204,"vote_count":18900}'
+  recorded_at: Mon, 24 Jul 2023 02:15:09 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/11?api_key=972b6f94cd2b25b1d64607afa76aa0e7
@@ -95,36 +95,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 08 Jul 2023 20:23:21 GMT
+      - Mon, 24 Jul 2023 01:29:04 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=22584
+      - public, max-age=24109
       X-Memc:
       - HIT
       X-Memc-Key:
       - a3dde13b574bdd203b706f79c6da42d3
       X-Memc-Age:
-      - '16515'
+      - '1286'
       X-Memc-Expires:
-      - '5673'
+      - '21698'
       Etag:
-      - W/"0957ffa2708c9495fd17437fb9076902"
+      - W/"080f55a96290195d35a16a6d71391c29"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 bd02c4a72f88f2bbd693051675941962.cloudfront.net (CloudFront)
+      - 1.1 dc50b0effd72a7b2c19bcb0909cfae82.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ORD58-P1
+      - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - M7mBF1yNfLAFphBct-nuBWI-783PGDfgkCJm39nB-2fS2GAlyBspVQ==
+      - pFkjwClVZ_fgZJKACO-OH7JGJwS9gtCqYQRM0Rkhw6Bd01wgMXskpg==
       Age:
-      - '2626'
+      - '2765'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/zqkmTXzjkAgXmEWLRsY4UpTWCeo.jpg","belongs_to_collection":{"id":10,"name":"Star
@@ -134,10 +134,10 @@ http_interactions:
         forces in their effort to take over the galactic Empire. Venturesome Luke
         Skywalker and dashing captain Han Solo team together with the loveable robot
         duo R2-D2 and C-3PO to rescue the beautiful princess and restore peace and
-        justice in the Empire.","popularity":79.873,"poster_path":"/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg","production_companies":[{"id":1,"logo_path":"/o86DbpburjxrqAzEDhXZcyE8pDb.png","name":"Lucasfilm
+        justice in the Empire.","popularity":80.88,"poster_path":"/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg","production_companies":[{"id":1,"logo_path":"/o86DbpburjxrqAzEDhXZcyE8pDb.png","name":"Lucasfilm
         Ltd.","origin_country":"US"},{"id":25,"logo_path":"/qZCc1lty5FzX30aOCVRBLzaVmcp.png","name":"20th
         Century Fox","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1977-05-25","revenue":775398007,"runtime":121,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
-        long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.203,"vote_count":18840}'
-  recorded_at: Sat, 08 Jul 2023 21:07:07 GMT
+        long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.204,"vote_count":18900}'
+  recorded_at: Mon, 24 Jul 2023 02:15:09 GMT
 recorded_with: VCR 6.2.0
