--- a/spec/fixtures/vcr_cassettes/Party/instance_methods/_movie_title/returns_the_movie_title.yml
+++ b/spec/fixtures/vcr_cassettes/Party/instance_methods/_movie_title/returns_the_movie_title.yml
@@ -25,36 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 08 Jul 2023 20:23:21 GMT
+      - Mon, 24 Jul 2023 01:29:04 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=22584
+      - public, max-age=24109
       X-Memc:
       - HIT
       X-Memc-Key:
       - a3dde13b574bdd203b706f79c6da42d3
       X-Memc-Age:
-      - '16515'
+      - '1286'
       X-Memc-Expires:
-      - '5673'
+      - '21698'
       Etag:
-      - W/"0957ffa2708c9495fd17437fb9076902"
+      - W/"080f55a96290195d35a16a6d71391c29"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 5a3010bd9376613ba1249daca87b27a2.cloudfront.net (CloudFront)
+      - 1.1 23d87d8c2ce38e34462e6c134d187eea.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ORD58-P1
+      - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - iZz6qBgvcPEw7gLCUDJ4AHlHI12GGzh6QAFetUFLSju1uVYt4oUFEw==
+      - f3tFEJSFf0QoxhjtDq9vIv1Zbnzw4ouNrmnc6EtEP5o2Ym1nDVYHCg==
       Age:
-      - '2626'
+      - '2765'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/zqkmTXzjkAgXmEWLRsY4UpTWCeo.jpg","belongs_to_collection":{"id":10,"name":"Star
@@ -64,12 +64,12 @@ http_interactions:
         forces in their effort to take over the galactic Empire. Venturesome Luke
         Skywalker and dashing captain Han Solo team together with the loveable robot
         duo R2-D2 and C-3PO to rescue the beautiful princess and restore peace and
-        justice in the Empire.","popularity":79.873,"poster_path":"/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg","production_companies":[{"id":1,"logo_path":"/o86DbpburjxrqAzEDhXZcyE8pDb.png","name":"Lucasfilm
+        justice in the Empire.","popularity":80.88,"poster_path":"/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg","production_companies":[{"id":1,"logo_path":"/o86DbpburjxrqAzEDhXZcyE8pDb.png","name":"Lucasfilm
         Ltd.","origin_country":"US"},{"id":25,"logo_path":"/qZCc1lty5FzX30aOCVRBLzaVmcp.png","name":"20th
         Century Fox","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1977-05-25","revenue":775398007,"runtime":121,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
-        long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.203,"vote_count":18840}'
-  recorded_at: Sat, 08 Jul 2023 21:07:07 GMT
+        long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.204,"vote_count":18900}'
+  recorded_at: Mon, 24 Jul 2023 02:15:09 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/11?api_key=972b6f94cd2b25b1d64607afa76aa0e7
@@ -95,36 +95,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 08 Jul 2023 20:23:21 GMT
+      - Mon, 24 Jul 2023 01:29:04 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=22584
+      - public, max-age=24109
       X-Memc:
       - HIT
       X-Memc-Key:
       - a3dde13b574bdd203b706f79c6da42d3
       X-Memc-Age:
-      - '16515'
+      - '1286'
       X-Memc-Expires:
-      - '5673'
+      - '21698'
       Etag:
-      - W/"0957ffa2708c9495fd17437fb9076902"
+      - W/"080f55a96290195d35a16a6d71391c29"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 f82a4020c8fc9b14a403737c65661074.cloudfront.net (CloudFront)
+      - 1.1 e158a5cd644f102abc630a9f56b59d78.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ORD58-P1
+      - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - cp0Tu9dbjXBLqMzb-v-bR9L1gM3oMO4yAO4upTvWMJ3Ld9WnlA-1Xg==
+      - 3pMgwSrvkTLtd-68CtsX7VM8wMEUOAKkXNxNAps-Sj_K9cbN5Yt4ow==
       Age:
-      - '2626'
+      - '2765'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/zqkmTXzjkAgXmEWLRsY4UpTWCeo.jpg","belongs_to_collection":{"id":10,"name":"Star
@@ -134,10 +134,10 @@ http_interactions:
         forces in their effort to take over the galactic Empire. Venturesome Luke
         Skywalker and dashing captain Han Solo team together with the loveable robot
         duo R2-D2 and C-3PO to rescue the beautiful princess and restore peace and
-        justice in the Empire.","popularity":79.873,"poster_path":"/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg","production_companies":[{"id":1,"logo_path":"/o86DbpburjxrqAzEDhXZcyE8pDb.png","name":"Lucasfilm
+        justice in the Empire.","popularity":80.88,"poster_path":"/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg","production_companies":[{"id":1,"logo_path":"/o86DbpburjxrqAzEDhXZcyE8pDb.png","name":"Lucasfilm
         Ltd.","origin_country":"US"},{"id":25,"logo_path":"/qZCc1lty5FzX30aOCVRBLzaVmcp.png","name":"20th
         Century Fox","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1977-05-25","revenue":775398007,"runtime":121,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
-        long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.203,"vote_count":18840}'
-  recorded_at: Sat, 08 Jul 2023 21:07:07 GMT
+        long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.204,"vote_count":18900}'
+  recorded_at: Mon, 24 Jul 2023 02:15:09 GMT
 recorded_with: VCR 6.2.0
