--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,6 @@
 
 
 /config/application.yml
-spec/fixtures/vcr_cassettes/movie_search.yml
-spec/fixtures/vcr_cassettes/top_rated_movies.yml
+
+spec/fixtures/vcr_cassettes
+
